service StockMarket {
    rpc GetStock (GetStockRequest) returns (GetStockResponse);
}

message GetStockRequest {
    string symbol = 1
}

message GetStockResponse {
  string symbol = 1;
  string full_name = 2;
  float current_price = 3;
  string current_pe_ratio = 4;
}